--- a/obesity.html
+++ b/obesity.html
@@ -4,14 +4,9 @@
 <meta charset="utf-8" />
 <title>obesity</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-
-<!-- <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-
 <style>
 	body { margin: 0; padding: 0; }
 	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
@@ -37,7 +32,7 @@
 
 <div id="map"></div>
 <div class = "legend">
-   <img src="./Legend.png" />
+   <img src="./images/legend.png" />
 </div>
 
 <script>
@@ -56,7 +51,7 @@ map.on('load', function() {
 
   map.addSource('obesity', {
       'type': 'geojson',
-      'data': './obesity.geojson',
+      'data': './data/obesity.geojson',
     });
 
 		// Use it
